--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>CryptoInfo...</title>
     <meta
       name="description"
-      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time and add them to your watchlist aswell."
+      content="CryptoInfo is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time and add them to your watchlist aswell."
     />
     <link rel="icon" href="https://i.ibb.co/x6FTCCy/logo.png" />
     <meta charset="utf-8" />
@@ -13,45 +13,45 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <link rel="canonical" href="https://crypto-dashboard-jan.netlify.app/" />
+    <link rel="canonical" href="https://getcryptoinfobyprem.netlify.app/" />
     <meta
       name="keywords"
-      content="CryptoTracker., crypto, tracker, crypto dashboard, dashboard, crypto tracking"
+      content="CryptoInfo., crypto, tracker, crypto dashboard, dashboard, crypto tracking"
     />
-    <meta name="author" content="Avi Vashishta" />
+    <meta name="author" content="prem kumar" />
 
     <meta name="twitter:card" content="https://i.ibb.co/x6FTCCy/logo.png" />
     <meta
       name="twitter:site"
-      content="https://crypto-dashboard-jan.netlify.app/"
+      content="https://getcryptoinfobyprem.netlify.app/"
     />
     <meta name="twitter:title" content="CryptoTracker." />
     <meta
       name="twitter:description"
-      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+      content="CrypoInfo is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
     />
     <meta
       name="twitter:image:src"
       content="https://i.ibb.co/x6FTCCy/logo.png"
     />
-    <meta name="twitter:image:alt" content="Crypto Tracker Logo" />
+    <meta name="twitter:image:alt" content="CrypoInfo Logo" />
     <meta
       property="og:url"
-      content="https://crypto-dashboard-jan.netlify.app/"
+      content="https://getcryptoinfobyprem.netlify.app/"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CryptoTracker." />
+    <meta property="og:title" content="CrypoInfo." />
     <meta property="og:image" content="https://i.ibb.co/x6FTCCy/logo.png" />
     <meta
       property="og:description"
-      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+      content="CrypoInfo is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
     />
-    <meta property="og:site_name" content="CryptoTracker." />
+    <meta property="og:site_name" content="CrypoInfo." />
 
-    <meta itemprop="name" content="CryptoTracker." />
+    <meta itemprop="name" content="CrypoInfo." />
     <meta
       itemprop="description"
-      content="CryptoTracker is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
+      content="CrypoInfo is the tracker you always needed. Compare different crypto currencies, look at their graphs - prices, total volumes, market cap, etc. Search from the top 100 Crypto currencies in real time."
     />
     <meta itemprop="image" content="https://i.ibb.co/x6FTCCy/logo.png" />
   <body>
